Fix schedule on mobile.

--- a/_sass/_schedule.scss
+++ b/_sass/_schedule.scss
@@ -4,6 +4,10 @@
   margin: 0;
   padding: 0 25% 0 20%;
   width: 100%;
+
+  @include breakpoint(to tablet-small) {
+    padding: 0 10% 0 0;
+  }
 }
 
 .schedule__row {
@@ -29,4 +33,12 @@
 .left {
   width: 10%;
   text-align: right;
+
+  @include breakpoint(to tablet-small) {
+    width: 15%;
+  }
+}
+
+.right {
+  width: 45%;
 }
